--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.2"
-  }
+  },
+  "packageManager": "yarn@3.3.0"
 }
