--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.15.0",
     "axios": "^0.27.2",
     "jsdom": "^20.0.3",
+    "mongoose": "^6.10.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/jsdom": "^20",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.7.15",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
