--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tanstack/react-query": "^4.15.0",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
+    "crypto-js": "^4.1.1",
     "jsdom": "^20.0.3",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -18,6 +20,7 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/jsdom": "^20",
     "@types/node": "18.7.15",
     "@types/react": "18.0.18",
