--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "axios": "^0.27.2",
     "cookies-next": "^2.1.1",
     "crypto-js": "^4.1.1",
-    "firebase": "^9.21.0",
     "jsdom": "^20.0.3",
     "mongoose": "^6.10.0",
     "next": "12.2.5",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
