--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ".:/app"
-      - "/app/node_modules"
     ports:
       - "3001:3000"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
