#44 feat: Dockerfile 추가 최적화 - 캐싱 제외 빌드시간 1.2% 절감, 이미지 용량 44.8% 절감

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,11 @@
-node_modules
+.github
+.history
+.next
+.vscode
+.dockerignore
+docker-compose.yml
+Dockerfile
+README.md
+.gitignore
+.eslintrc.json
+.prettierrc.js
