--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,10 @@
 on:
     push:
         branches:
-            - develop
+            - feature/20240123-enble-workflow
     pull_request:
         branches:
-            - develop
+            - feature/20240123-enble-workflow
 jobs:
     deploy:
         name: Deploy
@@ -17,6 +17,8 @@ jobs:
             OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
             OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
             OCIR_REPOSITORY: ${{ secrets.OCIR_REPOSITORY }}
+            OCIR_ENDPOINT: ${{ secrets.OCIR_ENDPOINT }}
+            OCIR_USERNAME: ${{ secrets.OCIR_USERNAME }}
 
         steps:
             - name: Checkout
@@ -30,18 +32,12 @@ jobs:
 
             - name: Build, Tag, Push the Docker Image
               id: build-image
-              env:
-                  OCIR_ENDPOINT: ${{ steps.login-oci.outputs.ocir_endpoint }}
-                  OCIR_USERNAME: ${{ steps.login-oci.outputs.ocir_username }}
               run: |
                   docker build -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest .
                   docker push $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest
 
             - name: Pull the Pushed Image
               uses: oracle-actions/run-oci-cli-command@v1.1.1
-              env:
-                  OCIR_ENDPOINT: ${{ steps.login-oci.outputs.ocir_endpoint }}
-                  OCIR_USERNAME: ${{ steps.login-oci.outputs.ocir_username }}
               with:
                   command: "docker pull image $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest"
 
