#46 feat: 빌드 옵션 추가

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Build, Tag, Push the Docker Image
         id: build-image
         run: |
-          docker build -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest .
+          docker build --platform linux/arm64/v8 -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest .
           docker push $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest
 
       - name: Deploy to OCI Compute Instance
