--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,6 +70,6 @@ jobs:
           port: ${{ secrets.REMOTE_SSH_PORT }}
           script: |
             cd ${{ secrets.OCI_COMPOSE_DIRECTORY }}
-            docker compose down
+            docker compose -p start-page-prod down
             docker pull $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest
-            docker compose -f docker-compose-prod.yml up -d
+            docker compose -f docker-compose-prod.yml -p start-page-prod up -d
