#48 feat: 도커파일, pm2 ecosystem 파일 각각 production, development로 분리 및 GitHub Workflow 수정

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: Build, Tag, Push the Docker Image
         id: build-image
         run: |
-          docker build --platform arm64 -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest-dev .
+          docker build --platform arm64 -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest-dev -f Dockerfile.development .
           docker push $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest-dev
 
       - name: Deploy to OCI Compute Instance
