--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: Build, Tag, Push the Docker Image
         id: build-image
         run: |
-          docker build --platform arm64 -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest .
+          docker build --platform arm64 -t $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest -f Dockerfile.production .
           docker push $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest
 
       - name: Deploy to OCI Compute Instance
