--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -30,7 +30,7 @@ WORKDIR /app
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 RUN npm install -g pm2
-COPY ecosystem.config.js ./ecosystem.config.js
+COPY ecosystem.production.js ./ecosystem.config.js
 COPY --from=deps /app/.pnp.cjs ./.pnp.cjs
 COPY --from=builder /app/.yarn ./.yarn
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./build
