#51 fix: 배포 스크립트가 대상 이미지를 불러오지 못하는 문제 수정

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,5 +70,5 @@ jobs:
           port: ${{ secrets.REMOTE_SSH_PORT }}
           script: |
             cd ${{ secrets.OCI_COMPOSE_DIRECTORY }}
-            docker pull $OCIR_ENDPOINT/$OCIR_USERNAME/$OCIR_REPOSITORY:latest
+            docker pull ${{ secrets.OCIR_ENDPOINT }}/${{ secrets.OCIR_USERNAME }}/${{ secrets.OCIR_REPOSITORY }}:latest
             sh deploy-prod.sh
