#51 test: DB 등록을 위한 사용자 아이디 발급이 불가능한 버그의 원인으로 추측되는 문제 수정사항 테스트

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -41,6 +41,7 @@ jobs:
           touch .env
           echo NEXT_PUBLIC_REQUEST_API=${{ secrets.NEXT_PUBLIC_REQUEST_API_DEV }} >> .env
           echo NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL_DEV }} >> .env
+          echo REGISTER_ORIGIN=${{ secrets.REGISTER_ORIGIN }} >> .env
           echo MONGO_DB_USER=${{ secrets.MONGO_DB_USER }} >> .env
           echo MONGO_DB_KEY=${{ secrets.MONGO_DB_KEY }} >> .env
           echo MONGO_DB_URI=${{ secrets.MONGO_DB_URI }} >> .env
