--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,6 +41,7 @@ jobs:
           touch .env
           echo NEXT_PUBLIC_REQUEST_API=${{ secrets.NEXT_PUBLIC_REQUEST_API }} >> .env
           echo NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }} >> .env
+          echo REGISTER_ORIGIN=${{ secrets.REGISTER_ORIGIN }} >> .env
           echo MONGO_DB_USER=${{ secrets.MONGO_DB_USER }} >> .env
           echo MONGO_DB_KEY=${{ secrets.MONGO_DB_KEY }} >> .env
           echo MONGO_DB_URI=${{ secrets.MONGO_DB_URI }} >> .env
