--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "jsdom": "^23.0.1",
     "mongoose": "^8.0.3",
+    "nanoid": "^5.0.5",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
