--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
-    "sharp": "^0.33.2",
-    "suncalc": "^1.9.0"
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
@@ -30,7 +29,6 @@
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
-    "@types/suncalc": "^1",
     "@yarnpkg/sdks": "^3.1.0",
     "autoprefixer": "^10.4.16",
     "eslint": "8.55.0",
