--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sharp": "^0.34.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/crypto-js": "^4.2.2",
     "@types/jsdom": "^21.1.7",
     "@types/mongoose": "^5.11.97",
